<resources>
    <string name="app_name">Reminder</string>
    <string name="show">Show</string>
    <string name="schedule">No Schedule Today</string>
    <string name="save">Save</string>
    <string name="input_your_aganda">Input Your Aganda:</string>

    <string-array name="Days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="label">Riminder App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="add">Add</string>
    <string name="add_your_agenda">Add your Agenda:</string>
    <string name="select_your_option">Select your option:</string>
    <string name="back">Go Back</string>
</resources>
